--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,8 +3,13 @@
 /*############*/
 
 body {
-  padding: 50px;
+  /*padding: 50px;*/
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+}
+
+p,h1 {
+  padding: 0;
+  margin: 0;
 }
 
 a {
@@ -63,5 +68,6 @@ a {
 /*LANDING PAGE*/
 
 .landing-page {
+  padding-top: 100px;
   background-color: #ebe8e5;
 }
