--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -16,6 +16,20 @@ a {
   color: #00B7FF;
 }
 
+img {
+  width: 100%;
+  max-width: 100%;
+}
+
+/*#########*/
+/*# FONTS #*/
+/*#########*/
+
+@font-face {
+  font-family: 'NewBaservilleStd-Bold';
+   src: url('../NewBaskervilleStd-Bold.otf');
+}
+
 /*##################*/
 /*APPLICATION STYLES*/
 /*##################*/
@@ -65,9 +79,45 @@ a {
   font: 10px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
+/*############*/
 /*LANDING PAGE*/
+/*###########*/
 
 .landing-page {
-  padding-top: 100px;
+  padding-top: 140px;
   background-color: #ebe8e5;
+}
+
+.opacity {
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 30px;
+  padding-bottom: 10px;
+  color: #b6a269;
+  opacity: .95;
+  font-family : 'NewBaservilleStd-Bold', serif;
+}
+
+.opacity p {
+  opacity: 1;
+  letter-spacing: 5px;
+}
+
+.opacity p:nth-of-type(2) {
+  padding-top: 18px;
+}
+
+.logo-img {
+  height: 3.5em;
+  width: 3.5em;
+}
+
+.logo-text {
+  position: absolute;
+  left: 72px;
+  top: 50px;
+}
+
+h1.text-center {
+   font-family : 'NewBaservilleStd-Bold', serif;
 }
