--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -121,3 +121,28 @@ img {
 h1.text-center {
    font-family : 'NewBaservilleStd-Bold', serif;
 }
+
+.start-chat {
+  border: 3px solid black;
+  background-color: white;
+  padding: 10px;
+  text-transform: uppercase;
+  font-family : 'NewBaservilleStd-Bold';
+  font-weight: bold;
+  font-size: 1.5em;
+
+}
+
+.start-chat:hover {
+  background-color: black;
+  color: #fff;
+}
+
+img.logo-img  {
+  width: 5.5em;
+  height: 5.5em;
+}
+
+p.lead {
+  color: #b6a269;
+}
