--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -146,3 +146,16 @@ img.logo-img  {
 p.lead {
   color: #b6a269;
 }
+
+
+.changeColor {
+  -moz-transition:color .5s ease-in;
+  -o-transition:color .5s ease-in;
+  -webkit-transition:color .5s ease-in;
+
+}
+
+.changeColor:hover{
+    color:#b6a269;
+    text-decoration: underline;
+}
