--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -31,6 +31,15 @@ img {
 }
 
 /*##################*/
+/* GRID ADJUSMENTS*/
+/*##################*/
+
+div[class^="col-"] {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+/*##################*/
 /*APPLICATION STYLES*/
 /*##################*/
 
@@ -73,6 +82,11 @@ img {
 
 .btn-primary.btn-msg:hover {
   background-color:#007861;
+}
+
+.btn-info.btn-room {
+  color: #fff;
+  background-color: #63d2bc;
 }
 
 
