Add margin on button layout for responsive view

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -89,6 +89,10 @@ div[class^="col-"] {
   background-color: #63d2bc;
 }
 
+.btn-layout > button{
+  margin-bottom: 5px;
+}
+
 
 /*############*/
 /*LANDING PAGE*/
