--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,13 +7,22 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-p,h1 {
+p,h1,ul,li {
   padding: 0;
   margin: 0;
 }
 
 a {
-  color: #00B7FF;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+a:hover {
+  text-decoration: none;
+}
+a:visited {
+  text-decoration: none;
+  color: inherit;
 }
 
 img {
@@ -29,6 +38,44 @@ img {
   font-family: 'NewBaservilleStd-Bold';
    src: url('../NewBaskervilleStd-Bold.otf');
 }
+
+@font-face {
+  font-family: 'icomoon';
+  src:url('fonts/icomoon.eot?-7o1zfj');
+  src:url('fonts/icomoon.eot?#iefix-7o1zfj') format('embedded-opentype'),
+    url('fonts/icomoon.woff?-7o1zfj') format('woff'),
+    url('fonts/icomoon.ttf?-7o1zfj') format('truetype'),
+    url('fonts/icomoon.svg?-7o1zfj#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  font-family: 'icomoon';
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  color: #fff;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-facebook:before {
+  content: "\ea8c";
+}
+
+.icon-twitter:before {
+  content: "\ea91";
+}
+
+.icon-github2:before {
+  content: "\eab2";
+}
+
 
 /*##################*/
 /* GRID ADJUSMENTS*/
@@ -117,80 +164,74 @@ div[class^="col-"] {
 /*###########*/
 
 .landing-page {
-  padding-top: 140px;
-  background-color: #ebe8e5;
-}
-
-.opacity {
-  padding-left: 30px;
-  padding-right: 30px;
-  padding-top: 30px;
-  padding-bottom: 10px;
-  color: #b6a269;
-  opacity: .95;
-  font-family : 'NewBaservilleStd-Bold', serif;
-}
-
-.opacity p {
-  opacity: 1;
-  letter-spacing: 5px;
-}
-
-.opacity p:nth-of-type(2) {
-  padding-top: 18px;
-}
-
-.logo-img {
-  height: 3.5em;
-  width: 3.5em;
-}
-
-.logo-text {
-  position: absolute;
-  left: 72px;
-  top: 50px;
-}
-
-h1.text-center {
-   font-family : 'NewBaservilleStd-Bold', serif;
-}
-
-.start-chat {
-  border: 3px solid black;
-  background-color: white;
-  padding: 10px;
-  text-transform: uppercase;
-  font-family : 'NewBaservilleStd-Bold';
-  font-weight: bold;
+  width: 96%;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 15px;
   font-size: 1.5em;
-
-}
-
-.start-chat:hover {
-  background-color: black;
+  background-color: #1ab395;
   color: #fff;
 }
 
-img.logo-img  {
-  width: 5.5em;
-  height: 5.5em;
+.landing-page > * {
+  text-align: center;
 }
 
-p.lead {
-  color: #b6a269;
+.landing-page ul {
+  list-style-type: none;
 }
 
-.changeColor {
-  -moz-transition:color .5s ease-in;
-  -o-transition:color .5s ease-in;
-  -webkit-transition:color .5s ease-in;
+.main-header, .landing-chat {
+  margin-bottom: 15px;
 }
 
-.changeColor:hover{
-  color:#b6a269;
-  text-decoration: underline;
+.landing-chat, .main-footer {
+  margin-top: 15px;
 }
 
-.text-center > a {
-  color: inherit;
+.main-section {
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
+
+.social-media {
+  margin-left: 15px;
+}
+
+.main-header nav li {
+  margin: 15px 0;
+}
+
+.main-header nav span {
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.main-header nav span:hover, .social-media a:hover {
+  color: #007861;
+}
+
+
+.banner h1 {
+  line-height: 50px;
+}
+
+.main-section .slogan {
+  margin-top: 30px;
+}
+
+.start-chatting {
+  color: white;
+  outline: none;
+  border: none;
+  background-color: #007861;
+  padding: 20px 35px;
+  text-transform: uppercase;
+}
+
+
+
+
+
+
+
